--- a/project-manager.html
+++ b/project-manager.html
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://hbkengineering.applytojob.com/apply/n4K2BcjsPr/Project-Manager'>Project Manager - HBK Engineering, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hbkengineering.applytojob.com/apply/n4K2BcjsPr/Project-Manager'>Project Manager - HBK Engineering, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1169960'>Job Application for Sr. Technical Program Manager, Critical Data Flows at Box</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1169960'>Job Application for Sr. Technical Program Manager, Critical Data Flows at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -156,7 +156,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/2385C520A6'>Wirecard Asia - Jobs: Project Manager, Professional Services (Sales) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/2385C520A6'>Wirecard Asia - Jobs: Project Manager, Professional Services (Sales) - Apply online</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Malaysia Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">Dubai Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421656-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421656-it-project-manager-digital-ecommerce-'>Bey IT Project Manager (Digital eCommerce) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999692379968-project-manager-financial-systems-ref2737d-'>Broadridge Project Manager - Financial Systems (REF2737D) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999692379968-project-manager-financial-systems-ref2737d-'>Broadridge Project Manager - Financial Systems (REF2737D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -226,11 +226,17 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/f79b1da0-e77c-4c75-9f6d-56c3eb60918b'>Carta - Technical Program Manager, Liquidity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/f79b1da0-e77c-4c75-9f6d-56c3eb60918b'>Carta - Technical Program Manager, Liquidity</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/finix/1ac0e305-3a21-4236-9d34-d216c9778689'>Finix - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-brph.icims.com/jobs/1332/federal-project-manager/job'>Federal Project Manager in Orlando, Florida | Careers at Orlando, FL</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... The Federal Project Manager of BRPH perform with the following duties to 
+support our Orlando, Florida office. The ideal candidate would be an Engineer or
+?...</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/finix/1ac0e305-3a21-4236-9d34-d216c9778689'>Finix - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -268,7 +274,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Program Manager I at PRO Unlimited @ Facebook in Menlo Park, CA.</p>
 <hr/>
-<h5><a href='https://brookfieldam.applytojob.com/apply/Dmvbt8BBe5/Project-Manager-6month-Contract'>Project Manager (6-month contract) - Brookfield Asset Management ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brookfieldam.applytojob.com/apply/Dmvbt8BBe5/Project-Manager-6month-Contract'>Project Manager (6-month contract) - Brookfield Asset Management ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Business Summary. Brookfield Asset Management Inc. (?Brookfield?) is a global 
 alternative asset manager with over $365 billion in assets under management.</p>
@@ -289,7 +295,7 @@ alternative asset manager with over $365 billion in assets under management.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -346,7 +352,7 @@ focusing on a mixture of E-Commerce, Travel, Hospitality and...</p>
 <p>2 days ago ... Nokia Software is looking to hire a Senior Project Manager that is up for a serious 
 challenge, willing to step out of their comfort zone and approach every day?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/project-manager-pmp-empiria-global-25135'>Project Manager - PMP Emperia Global - ELSEVIER Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/project-manager-pmp-empiria-global-25135'>Project Manager - PMP Emperia Global - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Project Manager will play a key role in a global initiative to standardize and 
 scale our customer scanning tools. Our digital tools maximize the value of?...</p>
@@ -370,7 +376,7 @@ inContact software features to the marketing place. Responsible for the E2E?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lazparking/job/oSPAafwb'>LAZ Parking Careers - Assistant Project Manager - Commercial</a></h5> 
+<h5><a href='https://jobs.jobvite.com/lazparking/job/oSPAafwb'>LAZ Parking Careers - Assistant Project Manager - Commercial</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 20, 2019 ... The Assistant Project Manager oversees the operations for assigned location(s), 
 under the direction of the Facilities Manager to ensure 24/7 professional?...</p>
@@ -429,7 +435,7 @@ through?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oHZCafwc'>Shift Digital Careers - Digital Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -439,7 +445,7 @@ through?...</p>
 Construction Company (Thalle), established in 1947, is a family-owned, privately-
 held,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz?apply=true'>Construction Project Manager - Scotland at OYO</a></h5> 
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz?apply=true'>Construction Project Manager - Scotland at OYO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Construction Project Manager - Scotland. Ayr, Scotland, United Kingdom Full-
 time. loading Fetching your Linkedin profile .</p>
@@ -462,10 +468,6 @@ time. loading Fetching your Linkedin profile .</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CarrWorkplaces/743999688833941-senior-project-manager-construction'>Carr Workplaces Senior Project Manager, Construction | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC Washington, D.C.</span></p>
-<p>Posted on: 2019-07-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 
